@@ -11,25 +11,22 @@ public class LeetCode93 {
 
     public List<String> restoreIpAddresses(String s) {
         List<String> res = new ArrayList<>();
-        backtrack(s, 0, new ArrayList<>(), res);
+        backtrack(res, s, 0, new ArrayList<>());
         return res;
     }
 
-    private void backtrack(String s, int i, List<String> list, List<String> res) {
-        if (list.size() == 4) {
-            if (i == s.length()) {
-                res.add(String.join(".", list));
-            }
+    public void backtrack(List<String> res, String s, int index, List<String> list) {
+        if (index == s.length() && list.size() == 4) {
+            res.add(String.join(".", list));
             return;
         }
-        for (int len = 1; len <= 3 && i + len <= s.length(); len++) {
-            String seg = s.substring(i, i + len);
-            if (seg.length() > 1 && seg.startsWith("0") || Integer.parseInt(seg) > 255) {
-                continue;
-            }
-            list.add(seg);
-            backtrack(s, i + len, list, res);
-            list.remove(list.size() - 1);
+        for (int i = index + 1; i <= Math.min(index + 3, s.length()); i++) {
+            String sub = s.substring(index, i);
+            int num = Integer.parseInt(sub);
+            if (sub.length() > 1 && s.charAt(index) == '0' || num > 255) continue;
+            list.add(sub);
+            backtrack(res, s, i, list);
+            list.removeLast();
         }
     }
 }
